# docu-helper-rag

./: .pre-commit-config.yaml  README.md  ingestion.py  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: core.py
