[project]
name = "docu-helper-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "certifi>=2026.6.17",
    "dotenv>=0.9.9",
    "fastapi>=0.138.2",
    "firecrawl-py>=4.31.0",
    "ipython>=9.15.0",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchainhub>=0.1.21",
    "langsmith>=0.9.3",
    "nltk>=3.9.4",
    "openai>=2.44.0",
    "pillow>=12.2.0",
    "pre-commit>=4.6.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "streamlit-chat>=0.1.1",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.3",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
